Added base64 codec